Crash when changing Size in Add Cube pop-up #76646

Closed
opened 2020-05-11 16:53:27 +02:00 by db · 11 comments

System Information
Operating system: Windows 10 x64 (1909)
Graphics card: Asus GeForce RTX 2080ti (latest GeForce Experience NVIDIA Studio Driver 442.92)

Blender Version
Broken:
2.90, 51ac411ce8, master, 2020-05-10 15:42
2.83, eaee2b4119, master, 2020-05-10 06:26

Worked: 2.82

Short description of error
Mouse-dragging the Size setting in the Add Cube popup causes Blender to crash. Both 2.83 and 2.90 daily build seem to exhibit the same issue.

Exact steps for others to reproduce the error

  1. Open Preferences, Reset to Factory Default (note: wasn't getting a crash when using my current preferences)
  2. Shift-A and add a Cube
  3. Drag the Size slider left/right (note: typing a value directly and hitting enter doesn't seem to cause the crash)
  4. Crash to desktop

I was getting CTD when using the Redo Last (Shift-R) shortcut when using a custom Transform Orientation. I hit this crash when trying to reproduce that. Unsure if the two are related.

Crash logs from 2.90 build:

blender_debug_output.txt
blender_system_info.txt

**System Information** Operating system: Windows 10 x64 (1909) Graphics card: Asus GeForce RTX 2080ti (latest GeForce Experience NVIDIA Studio Driver 442.92) **Blender Version** Broken: 2.90, 51ac411ce80c, master, 2020-05-10 15:42 2.83, eaee2b411935, master, 2020-05-10 06:26 Worked: 2.82 **Short description of error** Mouse-dragging the Size setting in the Add Cube popup causes Blender to crash. Both 2.83 and 2.90 daily build seem to exhibit the same issue. **Exact steps for others to reproduce the error** 1. Open Preferences, Reset to Factory Default (note: wasn't getting a crash when using my current preferences) 2. Shift-A and add a Cube 3. Drag the Size slider left/right (note: typing a value directly and hitting enter doesn't seem to cause the crash) 4. Crash to desktop I was getting CTD when using the Redo Last (Shift-R) shortcut when using a custom Transform Orientation. I hit this crash when trying to reproduce that. Unsure if the two are related. Crash logs from 2.90 build: [blender_debug_output.txt](https://archive.blender.org/developer/F8528285/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F8528286/blender_system_info.txt)
Author

Added subscriber: @browneggz

Added subscriber: @browneggz
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm this, and also that I had to reset to default preferences to cause it.

Can confirm this, and also that I had to reset to default preferences to cause it.
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

@mont29 This looks like an undo related crash. Maybe related to c43725e189

libc.so.6!raise (Unknown Source:0)
libc.so.6!abort (Unknown Source:0)
BKE_main_idmap_create(struct Main * bmain, const _Bool create_valid_ids_set, struct Main * old_bmain, const int idmap_types) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/main_idmap.c:126)
blo_make_old_idmap_from_main(FileData * fd, Main * bmain) (/home/hans/Documents/Blender-Git/blender/source/blender/blenloader/intern/readfile.c:2295)
BLO_read_from_memfile(Main * oldmain, const char * filename, MemFile * memfile, const struct BlendFileReadParams * params, ReportList * reports) (/home/hans/Documents/Blender-Git/blender/source/blender/blenloader/intern/readblenentry.c:390)
BKE_blendfile_read_from_memfile(bContext * C, struct MemFile * memfile, const struct BlendFileReadParams * params, ReportList * reports) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/blendfile.c:499)
BKE_memfile_undo_decode(MemFileUndoData * mfu, const int undo_direction, const _Bool use_old_bmain_data, bContext * C) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/blender_undo.c:87)
memfile_undosys_step_decode(struct bContext * C, struct Main * bmain, UndoStep * us_p, int undo_direction, _Bool UNUSED_is_final) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/memfile_undo.c:190)
undosys_step_decode(bContext * C, Main * bmain, UndoStack * ustack, UndoStep * us, int dir, _Bool is_final) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/undo_system.c:210)
BKE_undosys_step_undo_with_data_ex(UndoStack * ustack, bContext * C, UndoStep * us, _Bool use_skip) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/undo_system.c:696)
BKE_undosys_step_undo_with_data(UndoStack * ustack, bContext * C, UndoStep * us) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/undo_system.c:725)
ed_undo_step_impl(bContext * C, int step, const char * undoname, int undo_index, ReportList * reports) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/ed_undo.c:183)
ed_undo_step_by_name(bContext * C, const char * undo_name, ReportList * reports) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/ed_undo.c:259)
ED_undo_pop_op(bContext * C, wmOperator * op) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/ed_undo.c:308)
ED_undo_operator_repeat(bContext * C, wmOperator * op) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/ed_undo.c:583)
ED_undo_operator_repeat_cb_evt(bContext * C, void * arg_op, int UNUSED_arg_event) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/ed_undo.c:629)
ui_apply_but_funcs_after(bContext * C) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/interface/interface_handlers.c:916)
ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/interface/interface_handlers.c:10709)
wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:616)
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:2723)

This seems like quite a corner case though, because it only occurs right after resetting to factory settings. Starting Blender again after resetting to default settings does not cause the crash.

@mont29 This looks like an undo related crash. Maybe related to c43725e189 ``` libc.so.6!raise (Unknown Source:0) libc.so.6!abort (Unknown Source:0) BKE_main_idmap_create(struct Main * bmain, const _Bool create_valid_ids_set, struct Main * old_bmain, const int idmap_types) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/main_idmap.c:126) blo_make_old_idmap_from_main(FileData * fd, Main * bmain) (/home/hans/Documents/Blender-Git/blender/source/blender/blenloader/intern/readfile.c:2295) BLO_read_from_memfile(Main * oldmain, const char * filename, MemFile * memfile, const struct BlendFileReadParams * params, ReportList * reports) (/home/hans/Documents/Blender-Git/blender/source/blender/blenloader/intern/readblenentry.c:390) BKE_blendfile_read_from_memfile(bContext * C, struct MemFile * memfile, const struct BlendFileReadParams * params, ReportList * reports) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/blendfile.c:499) BKE_memfile_undo_decode(MemFileUndoData * mfu, const int undo_direction, const _Bool use_old_bmain_data, bContext * C) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/blender_undo.c:87) memfile_undosys_step_decode(struct bContext * C, struct Main * bmain, UndoStep * us_p, int undo_direction, _Bool UNUSED_is_final) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/memfile_undo.c:190) undosys_step_decode(bContext * C, Main * bmain, UndoStack * ustack, UndoStep * us, int dir, _Bool is_final) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/undo_system.c:210) BKE_undosys_step_undo_with_data_ex(UndoStack * ustack, bContext * C, UndoStep * us, _Bool use_skip) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/undo_system.c:696) BKE_undosys_step_undo_with_data(UndoStack * ustack, bContext * C, UndoStep * us) (/home/hans/Documents/Blender-Git/blender/source/blender/blenkernel/intern/undo_system.c:725) ed_undo_step_impl(bContext * C, int step, const char * undoname, int undo_index, ReportList * reports) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/ed_undo.c:183) ed_undo_step_by_name(bContext * C, const char * undo_name, ReportList * reports) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/ed_undo.c:259) ED_undo_pop_op(bContext * C, wmOperator * op) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/ed_undo.c:308) ED_undo_operator_repeat(bContext * C, wmOperator * op) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/ed_undo.c:583) ED_undo_operator_repeat_cb_evt(bContext * C, void * arg_op, int UNUSED_arg_event) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/undo/ed_undo.c:629) ui_apply_but_funcs_after(bContext * C) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/interface/interface_handlers.c:916) ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) (/home/hans/Documents/Blender-Git/blender/source/blender/editors/interface/interface_handlers.c:10709) wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:616) wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/hans/Documents/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:2723) ``` This seems like quite a corner case though, because it only occurs right after resetting to factory settings. Starting Blender again after resetting to default settings does not cause the crash.

Added subscriber: @brecht

Added subscriber: @brecht

The issue is that BKE_lib_libblock_session_uuid_reset is being called when resetting preferences to factory settings, even though the .blend file and datablocks remain unchanged. I also noticed that WM_file_read calls BKE_lib_libblock_session_uuid_reset before it is certain that a new file will be loaded.

Could we just remove BKE_lib_libblock_session_uuid_reset altogether? The UUID wraps around anyway, so I'm not sure there's anything to be gained from resetting it to zero.

The issue is that `BKE_lib_libblock_session_uuid_reset` is being called when resetting preferences to factory settings, even though the .blend file and datablocks remain unchanged. I also noticed that `WM_file_read` calls `BKE_lib_libblock_session_uuid_reset` before it is certain that a new file will be loaded. Could we just remove `BKE_lib_libblock_session_uuid_reset` altogether? The UUID wraps around anyway, so I'm not sure there's anything to be gained from resetting it to zero.

@brecht yes, think it simpler to just remove it altogether, it might be a bit tricky to do those calls always at proper place, and they do not bring any added value anymore...

@brecht yes, think it simpler to just remove it altogether, it might be a bit tricky to do those calls always at proper place, and they do not bring any added value anymore...

This issue was referenced by cda25f8f38

This issue was referenced by cda25f8f381d9596951062f22c66bca8302fe84f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-05-13 10:39:50 +02:00
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:35:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76646
No description provided.