Fix T76646: Crash when changing Size in Add Cube pop-up in some cases.

Remove resetting of ID uuid session counter, it is not really needed
anymore, and not trivial to do this properly everytime.

Thanks @brecht for investigating this.