source/blender/windowmanager/intern/wm_files.c
@@ -617,9 +617,6 @@ bool WM_file_read(bContext *C, const char *filepath, ReportList *reports)
 
   UI_view2d_zoom_cache_reset();
 
-  /* Reset session-wise ID UUID counter. */
-  BKE_lib_libblock_session_uuid_reset();
-
   /* first try to append data from exotic file formats... */
   /* it throws error box when file doesn't exist and returns -1 */
   /* note; it should set some error message somewhere... (ton) */
@@ -925,9 +922,6 @@ void wm_homefile_read(bContext *C,
       update_defaults = true;
     }
   }
-
-  /* Reset session-wise ID UUID counter. */
-  BKE_lib_libblock_session_uuid_reset();
 
   if (!use_factory_settings || (filepath_startup[0] != '\0')) {
     if (BLI_access(filepath_startup, R_OK) == 0) {
